--- a/module2-solution/css/style.css
+++ b/module2-solution/css/style.css
@@ -10,8 +10,8 @@
   }
 
   body{
-      margin: 0;
-      padding: 0;
+    margin: 0;
+    padding: 0;
     font-family: "Courier", serif, sans-serif;
   }
 
@@ -34,13 +34,13 @@
     font-size: 25px;
     padding: 2%;
     padding-top: 55px;
-    background-color: rgba(0,0,0,0.3);
+    background-color: #C0C0C0;
   }
   
   .title{
     overflow: none;
     text-align: center;
-    border: 4px solid black;
+    border: 5px solid #1E1E24;
     width: 100px;
     height: 40px;
     padding: 5px;
@@ -69,7 +69,7 @@
   @media (min-width: 992px) {
     .col-lg-4 {
         float: left;
-      width: 33.33%;
+        width: 33.33%;
     }
   }
 
@@ -85,7 +85,7 @@
       margin-left: -10px;
       width: 100%;
     }
-    .name3{
+    .title3{
       margin-right: 65px;
       width: 100px;
     }
