--- a/module2-solution/css/style.css
+++ b/module2-solution/css/style.css
@@ -40,7 +40,7 @@
     overflow: none;
     text-align: center;
     border: 5px solid #1E1E24;
-    width: 100px;
+    width: 100%;
     height: 40px;
     padding: 5px;
     float: right;
