--- a/module2-solution/css/style.css
+++ b/module2-solution/css/style.css
@@ -9,13 +9,12 @@
   }
 
   body{
-    margin: 0;
-    padding: 0;
+    text-align: center;
     font-family: "Courier", serif, sans-serif;
   }
 
   .box{
-    width: 100%;
+    width: 90%;
     overflow: none;
   }
   
@@ -26,7 +25,7 @@
 
   .inside{
     border: 5px solid #1E1E24;
-    width: 100%;
+    width: 91%;
     height: auto;
     margin: 2.5%;
     color: #1E1E24;
@@ -39,12 +38,12 @@
   .title{
     overflow: none;
     text-align: center;
-    border: 5px solid #1E1E24;
-    width: 100%;
+    border: 4px solid #1E1E24;
+    width: 100px;
     height: 40px;
     padding: 5px;
     float: right;
-    margin-right: 30px;
+    margin-right: 36px;
     margin-top: 0px;
     font-weight: bold;
     position: relative;
