--- a/module2-solution/css/style.css
+++ b/module2-solution/css/style.css
@@ -6,15 +6,18 @@
     text-align: center;
     color: #444140;
     font-size: 50px;
+    margin-bottom: 20PX;
   }
 
   body{
     text-align: center;
     font-family: "Courier", serif, sans-serif;
+    margin: 0;
+    padding: 0;
   }
 
   .box{
-    width: 90%;
+    width: 100%;
     overflow: none;
   }
   
@@ -24,27 +27,27 @@
   }
 
   .inside{
-    border: 5px solid #1E1E24;
-    width: 91%;
+    border: 2px solid black;
+    width: 90.5%;
     height: auto;
     margin: 2.5%;
     color: #1E1E24;
-    font-size: 25px;
+    font-size: 20px;
     padding: 2%;
     padding-top: 55px;
     background-color: #C0C0C0;
   }
   
   .title{
+    border: 2px solid black;
     overflow: none;
     text-align: center;
-    border: 4px solid #1E1E24;
+    margin-right: 36px;
+    margin-top: 0px;
     width: 100px;
     height: 40px;
     padding: 5px;
     float: right;
-    margin-right: 36px;
-    margin-top: 0px;
     font-weight: bold;
     position: relative;
   }
